old slurm/slurm-4946.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
src/direct_cuda_pattern.cc:50:14: error: expected ';' in 'for' statement specifier
for(int index<80; true; index++)
             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
intensity_x_0
0.9998922900000000169	
5.3699999999999997464e-05	
5.3709999999999999062e-05	

intensity_x_1
0.84424030999999999381	
0.077879210000000004266	
0.077879210000000004266	

intensity_x_2
0.85232669000000005344	
0.14767335000000000877	
4.799999999999999571e-07	

intensity_x_3
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_4
0.99989234999999998532	
5.3669999999999999445e-05	
5.3669999999999999445e-05	

intensity_x_5
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_6
0.83436560999999997978	
0.16375110000000001054	
0.0018835699999999999926	

intensity_x_7
0.84424030999999999381	
0.077879249999999997089	
0.077879210000000004266	

intensity_x_8
0.84424030999999999381	
0.077879210000000004266	
0.077879210000000004266	

intensity_x_9
0.25151866999999999974	
0.37424110999999998795	
0.37424105000000001953	

intensity_x_10
0.84453224999999998435	
0.077733769999999993705	
0.077733789999999997056	

intensity_x_11
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_12
0.99989307000000005043	
5.3650000000000003025e-05	
5.3650000000000003025e-05	

intensity_x_13
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_14
0.84453224999999998435	
0.077733780000000002319	
0.077733789999999997056	

intensity_x_15
0.25151869999999998395	
0.37424110999999998795	
0.37424105000000001953	

intensity_x_16
0.84424043000000004167	
0.077879219999999999002	
0.077879219999999999002	

intensity_x_17
0.85232669000000005344	
0.14767335000000000877	
4.799999999999999571e-07	

intensity_x_18
0.84453224999999998435	
0.077733769999999993705	
0.077733789999999997056	

intensity_x_19
0.2517331199999999769	
0.37413322999999998331	
0.37413317000000001489	

intensity_x_20
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908097999999998073	

intensity_x_21
0.99989258999999997002	
5.3629999999999999828e-05	
5.3629999999999999828e-05	

intensity_x_22
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908101000000002045	

intensity_x_23
0.2517331199999999769	
0.37413322999999998331	
0.37413317000000001489	

intensity_x_24
0.84453224999999998435	
0.077733780000000002319	
0.077733810000000000406	

intensity_x_25
0.85232669000000005344	
0.14767336999999999825	
4.799999999999999571e-07	

intensity_x_26
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_27
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_28
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908097999999998073	

intensity_x_29
0.25223178000000001653	
8.6500000000000001909e-06	
8.6500000000000001909e-06	
0.37387437000000001142	
0.37387451999999998797	

intensity_x_30
0.43996691999999998357	
3.7119999999999996965e-05	
3.7119999999999996965e-05	
9.6979999999999996437e-05	
0.27993107000000000406	
0.27993112999999997248	

intensity_x_31
0.25223178000000001653	
8.6500000000000001909e-06	
8.6500000000000001909e-06	
0.37387442999999997983	
0.37387455000000002769	

intensity_x_32
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908086999999998312	

intensity_x_33
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_34
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_35
0.9998922900000000169	
5.3699999999999997464e-05	
5.3709999999999999062e-05	

intensity_x_36
0.99989234999999998532	
5.3669999999999999445e-05	
5.3669999999999999445e-05	

intensity_x_37
0.99989307000000005043	
5.3650000000000003025e-05	
5.3650000000000003025e-05	

intensity_x_38
0.99989258999999997002	
5.3629999999999999828e-05	
5.3629999999999999828e-05	

intensity_x_39
0.43996691999999998357	
9.6979999999999996437e-05	
3.7119999999999996965e-05	
0.27993112999999997248	
3.7119999999999996965e-05	
0.27993112999999997248	

intensity_x_40
0.11929364000000000634	
7.5820000000000002519e-05	
7.5829999999999997341e-05	
7.5820000000000002519e-05	
0.22010075000000001166	
0.22010087999999999875	
7.5829999999999997341e-05	
0.22010082999999999731	
0.22010087999999999875	

intensity_x_41
0.43996686000000001515	
9.6979999999999996437e-05	
3.7119999999999996965e-05	
0.27993107000000000406	
3.7119999999999996965e-05	
0.27993109999999998827	

intensity_x_42
0.99989258999999997002	
5.3629999999999999828e-05	
5.3629999999999999828e-05	

intensity_x_43
0.99989307000000005043	
5.3650000000000003025e-05	
5.3650000000000003025e-05	

intensity_x_44
0.99989234999999998532	
5.3669999999999999445e-05	
5.3669999999999999445e-05	

intensity_x_45
0.9998922900000000169	
5.3699999999999997464e-05	
5.3709999999999999062e-05	

intensity_x_46
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_47
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_48
0.53083371999999995339	
0.46908086999999998312	
8.5279999999999996649e-05	

intensity_x_49
0.25223178000000001653	
8.6500000000000001909e-06	
0.37387439999999999563	
8.6500000000000001909e-06	
0.37387449000000000376	

intensity_x_50
0.43996691999999998357	
3.7119999999999996965e-05	
3.7119999999999996965e-05	
9.6979999999999996437e-05	
0.27993112999999997248	
0.27993107000000000406	

intensity_x_51
0.25223178000000001653	
8.6500000000000001909e-06	
0.37387442999999997983	
8.6500000000000001909e-06	
0.37387449000000000376	

intensity_x_52
0.53083371999999995339	
0.46908090000000002284	
8.5279999999999996649e-05	

intensity_x_53
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_54
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_55
0.85227763999999994748	
0.14768285999999999913	
3.9719999999999999177e-05	

intensity_x_56
0.84453224999999998435	
0.077733780000000002319	
0.077733789999999997056	

intensity_x_57
0.2517331199999999769	
0.37413322999999998331	
0.37413317000000001489	

intensity_x_58
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908086999999998312	

intensity_x_59
0.99989258999999997002	
5.3629999999999999828e-05	
5.3629999999999999828e-05	

intensity_x_60
0.53083371999999995339	
8.5279999999999996649e-05	
0.46908097999999998073	

intensity_x_61
0.2517331199999999769	
0.37413322999999998331	
0.37413317000000001489	

intensity_x_62
0.84453224999999998435	
0.077733769999999993705	
0.077733789999999997056	

intensity_x_63
0.85227763999999994748	
0.14768291000000000057	
3.9719999999999999177e-05	

intensity_x_64
0.84424030999999999381	
0.077879249999999997089	
0.077879210000000004266	

intensity_x_65
0.25151869999999998395	
0.37424110999999998795	
0.37424105000000001953	

intensity_x_66
0.84453224999999998435	
0.077733780000000002319	
0.077733810000000000406	

intensity_x_67
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_68
0.99989307000000005043	
5.3650000000000003025e-05	
5.3650000000000003025e-05	

intensity_x_69
0.9999898699999999474	
5.0499999999999999303e-06	
5.0499999999999999303e-06	

intensity_x_70
0.84453224999999998435	
0.077733769999999993705	
0.077733789999999997056	

intensity_x_71
0.25151866999999999974	
0.37424110999999998795	
0.37424105000000001953	

intensity_x_72
0.84424030999999999381	
0.077879210000000004266	
0.077879210000000004266	

intensity_x_73
0.84424043000000004167	
0.077879219999999999002	
0.077879219999999999002	

intensity_x_74
0.85232669000000005344	
0.14767336999999999825	
4.799999999999999571e-07	

intensity_x_75
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_76
0.99989234999999998532	
5.3669999999999999445e-05	
5.3669999999999999445e-05	

intensity_x_77
0.99998998999999999526	
5.0699999999999997388e-06	
5.0699999999999997388e-06	

intensity_x_78
0.83436560999999997978	
0.16375110000000001054	
0.0018835699999999999926	

intensity_x_79
0.84424030999999999381	
0.077879210000000004266	
0.077879210000000004266	

intensity_x_80
0.9998922900000000169	
5.3699999999999997464e-05	
5.3709999999999999062e-05	

intensity_x_zero
0.99999929652498209531	
3.5173688058270160857e-07	
3.517381372473892238e-07	


real	0m0.056s
user	0m0.008s
sys	0m0.008s
